feat(#): Estructura landpage para deportes de moda

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <!-- Font Awesome -->
         <script src="vendor/fontawesome-all.js" type="text/javascript"></script>
         <script src="vendor/jquery/effects/slider.js" type="text/javascript"></script>
+        <script src="model/seleccion/seleccion_deportes.js" type ="text/javascript"></script>
 
         <!-- Navigation -->
         <nav id="main-header-effect" class="navbar navbar-expand-lg navbar-dark bg-main-header-custom fixed-top">
@@ -119,6 +120,53 @@
                 </div>
             </div>
         </section>
+        
+        <!-- Bloque seleccion deportes -->
+        
+        <div id=”deportes-seleccion” >
+            <ul id=”deportes-moda>
+                <li>
+                    <header>Deportes de moda</header>
+                    <div>
+                        <ul id="deportes-moda-imagenes">
+                            <li id="d1">
+                                    <a>
+                                        <img src="" alt="">imagen de cada polideportivo</img>
+                                    </a>
+                            </li>
+                            <li id="d2">
+                                    <a>
+                                        <img src="">imagen de cada polideportivo</img>
+                                    </a>
+                            </li>
+                            <li id="d3">
+                                    <a>
+                                        <img src="">imagen de cada polideportivo</img>
+                                    </a>
+                            </li>
+                            <li id="d4">
+                                    <a>
+                                        <img src="">imagen de cada polideportivo</img>
+                                    </a>
+                            </li>
+                        </ul>
+                    <div>
+                </li>
+                <li>
+                    <header>titulo</header>
+                    <div>
+                        <ul>
+                            <li>
+                                    <a>
+                                        <img>imagen de cada polideportivo</img>
+                                    </a>
+                            </li>
+                        </ul>
+                    <div>
+                </li>
+            </ul>
+        </div>
+
 
         <!-- Footer -->
         <footer class="footer">
