feat(#): php seleccion_deportes

--- a/index.html
+++ b/index.html
@@ -124,36 +124,37 @@
         <!-- Bloque seleccion deportes -->
         
         <div id=”deportes-seleccion” >
-            <ul id=”deportes-moda>
-                <li>
+            <ul >
+                <li id=”deportes-moda>
                     <header>Deportes de moda</header>
                     <div>
                         <ul id="deportes-moda-imagenes">
-                            <li id="d1">
+                          <!--  <li id="d1">
                                     <a>
                                         <img src="" alt="">imagen de cada polideportivo</img>
                                     </a>
                             </li>
                             <li id="d2">
                                     <a>
-                                        <img src="">imagen de cada polideportivo</img>
+                                        <img src="" alt="">imagen de cada polideportivo</img>
                                     </a>
                             </li>
                             <li id="d3">
                                     <a>
-                                        <img src="">imagen de cada polideportivo</img>
+                                        <img src="" alt="">imagen de cada polideportivo</img>
                                     </a>
                             </li>
                             <li id="d4">
                                     <a>
-                                        <img src="">imagen de cada polideportivo</img>
+                                        <img src="" alt="">imagen de cada polideportivo</img>
                                     </a>
                             </li>
+                            -->
                         </ul>
                     <div>
                 </li>
                 <li>
-                    <header>titulo</header>
+                    <header>Deportes de temporada</header>
                     <div>
                         <ul>
                             <li>
