--- a/index.html
+++ b/index.html
@@ -19,21 +19,26 @@
         <link href="vendor/mdb/css/mdb.min.css" rel="stylesheet" type="text/css"/>
         <!-- Custom styles for this template -->
         <link href="styles/css/half-slider.css" rel="stylesheet" type="text/css"/> 
+         <!-- Carro compra-->
+         <link href="styles/css/carro.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
+        <!--Prueba-->
+        <script src="model/cart/jsonPrueba.js" type="text/javascript"></script>
         <!--Jquery and Jquery UI -->
         <script src="vendor/jquery/jquery.min.js"></script>
         <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
         <!-- Bootstrap core JavaScript -->
         <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
         <!-- MDB -->
-        <script src="vendor/mdb/js/mdb.min.js" type="text/javascript"></script>
+        <script src="vendor/mdb/js/mdb.min.js" type="text/javascript"></script>   
         <!-- Data picker -->
         <script src="vendor/jquery/components/data_picker/data_picker.js" type="text/javascript"></script>
         <!-- Font Awesome -->
         <script src="vendor/fontawesome-all.js" type="text/javascript"></script>
         <script src="vendor/jquery/effects/slider.js" type="text/javascript"></script>
-
+        <!-- Carro compra-->
+        <script src="model/cart/modal.js" type="text/javascript"></script>
         <!-- Navigation -->
         <nav id="main-header-effect" class="navbar navbar-expand-lg navbar-dark bg-main-header-custom fixed-top">
             <div class="container">
@@ -60,6 +65,9 @@
                             <a class="nav-link btn btn-primary nav-login" href="#">Log In</a>
                         </li>
                     </ul>
+                    <button type="button" class=" nav-item__carro" data-toggle="modal" data-target="#Modal__carrito">
+                        <i class="fab fa-opencart fa-lg"></i><span class="nav-item__carro__contador"></span>
+                    </button>
                 </div>
             </div>
         </nav>
@@ -111,6 +119,29 @@
                 </div>
             </div>
         </section>
+        <!-- Modal -->
+        <div class="modal fade right" id="Modal__carrito" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog  modal-lg modal-right" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">RESERVAS</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <hr>
+                    <div class="modal-body" id="carrito__contenido">
+                        
+                    </div>
+                    <hr>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+                        <button type="button" id="boton__vaciar" class="btn btn-secondary ">Vaciar</button>
+                        <button type="button" id="boton__reservar" class="btn btn-primary ">Reservar</button>
+                    </div>
+                </div>
+            </div>
+        </div>
         <!-- Footer -->
         <footer class="footer">
             <div class="container">
