--- a/index.html
+++ b/index.html
@@ -167,7 +167,26 @@
                 </div>
             </div>
         </div>
-
+          <!-- Modal Realizar Pedido Reservas-->
+        <div class="modal fade" id="Comprar-Reservas" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-side modal-bottom-right" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h4 class="modal-title" id="exampleModalLabel">Reservas</h4>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <h6>¿Realizar la reserva y pago?</h6>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+                        <button type="button" class="btn btn-primary boton--pagar-reservar">Reservar</button>
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <!--Footer-->
         <footer class="page-footer center-on-small-only elegant-color lighten-3 wow fadeInUp">
